# TG_bot

./: .env.example  .gitignore  EXCEL_PARSING_FIX.md  README.md  __init__.py  clear_cache.sh  converter.py  doc_parser.py  docx_parser.py  excel_parser.py  main.py  pdf_parser.py  pyproject.toml  quick_test.py  requirements.txt  text_cleaner.py
.project/: AUDIT_REPORT_2025-12-20.md  BINARY_DOC_EXTRACTION_QUALITY_FIX.md  DOC_PARSER_FIX_2025-12-21.md  FIXES_2025-12-20.md
app/: __init__.py  bot.py  config.py
app/handlers/: __init__.py  chat.py  common.py  conversation.py  documents.py  homework.py  prompts.py  rag.py
app/localization/: __init__.py  ru.py
app/states/: analysis.py  chat.py  conversation.py  homework.py  prompts.py  rag.py
app/utils/: cleanup.py  menu.py  text_splitter.py
docs/: 22_12_25_RAG_TECHNICAL_SPECIFICATION.md  CONVERSATION_MODE.md  EXCEL_PARSER_FIX.md  MODES_OVERVIEW.md  PROGRESS_2025-12-20_MAIN.md  PROGRESS_2025-12-21_FIXES.md  PROMPT_MANAGEMENT.md  RAG_TECHNICAL_SPECIFICATION.md  REPLICATE_INTEGRATION.md  SMP_AUDIT.md  TECHNOLOGY_PROMPTS_AND_DOCUMENTS.md  TZ_VOICE_INPUT.md  UNIFIED_MENU.md  USER_GUIDE_RAG.md
examples/: __init__.py  homework_example.py  replicate_streaming_demo.py
rag_knowledge_base/: 21_12_25_PROJECT_STATUS.md  21_12_25_RAG_FOR_DUMMIES.md  ARCHITECTURE.md  DEVELOPMENT.md  INTEGRATION.md  README.md  STATUS_REPORT.md  TECHNICAL_SPECIFICATION.md  TESTING.md  quick_test.py  requirements.txt  test_rag_functionality.py
rag_knowledge_base/docs/: API.md  FAQ.md  MIGRATION.md  PERFORMANCE.md
rag_knowledge_base/examples/: README.md  advanced_example.py  basic_example.py
rag_knowledge_base/rag_module/: __init__.py  config.py  exceptions.py  models.py
rag_knowledge_base/tests/: __init__.py  conftest.py  test_chunker.py  (+7 more)
temp/: .keep
tests/: __init__.py  test_file_processing.py
(+42 files in other folders)
